--- a/client/src/index.css
+++ b/client/src/index.css
@@ -5,6 +5,7 @@
 input[type="text"],
 input[type="password"],
 input[type="email"],
+input[type="tel"],
 input[type="number"],
 input[type="time"],
 input[type="date"],
